--- a/theme/cottyn/front-page.html
+++ b/theme/cottyn/front-page.html
@@ -89,7 +89,13 @@
             <div class="main-hdr-rgt">
               <nav class="main-nav">
                 <ul class="reset-list clearfix">
-                  <li><a href="#">Vakgebieden</a></li>
+                  <li class="current-menu-item menu-item-has-children"><a href="#">Vakgebieden</a>
+                    <ul class="sub-menu">
+                      <li><a href="#">submenu 1</a></li>
+                      <li><a href="#">submenu 2</a></li>
+                      <li><a href="#">submenu 3</a></li>
+                    </ul>
+                  </li>
                   <li><a href="#">Ons team</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
