--- a/theme/cottyn/front-page.html
+++ b/theme/cottyn/front-page.html
@@ -66,6 +66,18 @@
     </defs>
     </symbol>
 
+    <symbol id="news-des-btn" width="32" height="18" viewBox="0 0 32 18"  xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.50106 10.0545H26.6833L21.9655 14.7724C20.6103 16.1276 22.6431 18.1602 23.9982 16.805L28.2949 12.5017L31.1632 9.62894C31.719 9.06973 31.719 8.16659 31.1632 7.60739L23.9982 0.434088C23.7256 0.153971 23.3504 -0.00320143 22.9595 4.94468e-05C21.669 0.000211991 21.0357 1.57202 21.9655 2.46688L26.6945 7.18476H1.42686C-0.560597 7.28337 -0.412202 10.1535 1.50106 10.0545Z" fill="#0084A9"/>
+    </symbol>
+
+    <symbol id="slider-lft-arrow-svg" width="32" height="18" viewBox="0 0 32 18" xmlns="http://www.w3.org/2000/svg">
+    <path d="M30.079 10.0545H4.89676L9.61458 14.7724C10.9697 16.1276 8.93701 18.1602 7.58186 16.805L3.28518 12.5017L0.416925 9.62894C-0.138968 9.06973 -0.138968 8.16659 0.416925 7.60739L7.58186 0.434088C7.85445 0.153971 8.22968 -0.00320143 8.62062 4.94468e-05C9.9111 0.000211991 10.5444 1.57202 9.61458 2.46688L4.88556 7.18476H30.1532C32.1407 7.28337 31.9923 10.1535 30.079 10.0545Z"fill="#0084A9"/>
+    </symbol>
+
+    <symbol id="slider-rgt-arrow-svg"  width="32" height="18" viewBox="0 0 32 18" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1.50106 10.0545H26.6833L21.9655 14.7724C20.6103 16.1276 22.6431 18.1602 23.9982 16.805L28.2949 12.5017L31.1632 9.62894C31.719 9.06973 31.719 8.16659 31.1632 7.60739L23.9982 0.434088C23.7256 0.153971 23.3504 -0.00320143 22.9595 4.94468e-05C21.669 0.000211991 21.0357 1.57202 21.9655 2.46688L26.6945 7.18476H1.42686C-0.560597 7.28337 -0.412202 10.1535 1.50106 10.0545Z"fill="#0084A9"/>
+    </symbol>
+
 
 
 
@@ -153,9 +165,9 @@
     <div class="hm-banner-img inline-bg" style="background: url(assets/images/hm-bnr.jpg);"></div>
   </div>
     <div class="hm-banner-wrap">
-    <div class="hm-bnr-bg-ef-1">
-      <img src="assets/images/hm-bnr-ef-1.png" alt="">
-    </div>
+      <div class="hm-bnr-bg-ef-1">
+        <img src="assets/images/hm-bnr-ef-1.png" alt="">
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6"></div>
@@ -179,7 +191,6 @@
         </div>
       </div>
     </div>
-  </div>
 </section>
 
 <section class="two-plat-text-module-sec">
@@ -207,12 +218,363 @@
   </div>
 </section>
 
+<section class="cta-module-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="cta-module-sec-inner">
+          <div class="cta-module-sec-des">
+            <h2 class="cta-module-title">Nibh bibendum eu tincidunt odio non. </h2>
+            <p>Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. Habitant et nibh facilisis morbi.</p>
+            <div class="cta-module-sec-btn">
+              <a class="fl-transparent-btn" href="#">Neem contact op</a>
+              <a class="fl-transparent-btn" href="#">Blijf op de hoogte met onze nieuwsbrief</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="blockquote-sec">
+  <div class="container">
+    <div class="row">
+      <div class="com-md-12">
+        <div class="blockquote-sec-cntlr">
+          <blockquote>
+            <div class="blockquote-des">
+              <p>“ Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. Habitant et nibh facilisis morbi. “</p>
+              <strong>Mahatma Gandhi</strong>
+            </div>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="expertise-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="expertise-sec-cntlr">
+          <div class="sec-entry-hdr">
+            <h3 class="fl-h3 sec-entry-hdr-title">Vakgebieden</h3>
+            <p>Nunc lorem augue, condimentum eu aliquam id, eleifend nec ex. Integer malesuada volutpat finibus. <strong>Habitant et nibh facilisis morbi.</strong></p>
+          </div>
+          <div class="expertise-sec-grds exprtSlider">
+            <div class="expertise-grd-item">
+              <div class="expertise-grd-item-inner">
+                <div class="expertise-grd-img">
+                  <i>
+                    <img src="assets/images/expertise-img-1.png" alt="">
+                  </i>
+                </div>
+                <div class="expertise-grd-sec-des mHc">
+                  <h5 class="fl-h5">Publiek en administratief recht</h5>
+                </div>
+              </div>
+            </div>
+            <div class="expertise-grd-item">
+              <div class="expertise-grd-item-inner">
+                <div class="expertise-grd-img">
+                  <i>
+                    <img src="assets/images/expertise-img-1.png" alt="">
+                  </i>
+                </div>
+                <div class="expertise-grd-sec-des mHc">
+                  <h5 class="fl-h5">Publiek en administratief recht</h5>
+                </div>
+              </div>
+            </div>
+            <div class="expertise-grd-item">
+              <div class="expertise-grd-item-inner">
+                <div class="expertise-grd-img">
+                  <i>
+                    <img src="assets/images/expertise-img-2.png" alt="">
+                  </i>
+                </div>
+                <div class="expertise-grd-sec-des mHc">
+                  <h5 class="fl-h5">Verzekeringen, verkeer en aansprakelijkheid</h5>
+                </div>
+              </div>
+            </div>
+            <div class="expertise-grd-item">
+              <div class="expertise-grd-item-inner">
+                <div class="expertise-grd-img">
+                  <i>
+                    <img src="assets/images/expertise-img-3.png" alt="">
+                  </i>
+                </div>
+                <div class="expertise-grd-sec-des mHc">
+                  <h5 class="fl-h5">Bouwrecht</h5>
+                </div>
+              </div>
+            </div>
+            <div class="expertise-grd-item">
+              <div class="expertise-grd-item-inner">
+                <div class="expertise-grd-img">
+                  <i>
+                    <img src="assets/images/expertise-img-4.png" alt="">
+                  </i>
+                </div>
+                <div class="expertise-grd-sec-des mHc">
+                  <h5 class="fl-h5">Burgerlijk recht</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<section class="news-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="news-sec-cntlr">
+          <div class="sec-entry-hdr">
+            <h3 class="fl-h3 sec-entry-hdr-title">Nieuws</h3>
+            <p>Nunc lorem augue, condimentum eu aliquam id, eleifend nec ex. Integer malesuada volutpat finibus. <strong>Habitant et nibh facilisis morbi.</strong></p>
+          </div>
+
+          <div class="news-sec-grds newsSlider">
+            <div class="news-sec-grd">
+              <div class="news-sec-grd-item">
+                <div class="news-sec-grd-item-des">
+                  <div class="news-published">
+                    <span><strong>22</strong><br>sep</span>
+                  </div>
+                  <h5 class="fl-h5 news-grd-title"><a href="#">Massa, dictum quam quis mattis nunc gravida elementum donec ipsum.</a> </h5>
+                  <p>Senectus mattis a, mattis maecenas lobortis vitae blandit integer. Pulvinar tellus vitae<br> leo molestie.</p>
+                  <div class="news-grd-btn">
+                    <a href="#">
+                      <i>
+                        <svg class="news-des-btn" width="32" height="18" viewBox="0 0 32 18" fill="#FF5C26">
+                          <use xlink:href="#news-des-btn"></use>
+                        </svg>
+                      </i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="news-sec-grd">
+              <div class="news-sec-grd-item">
+                <div class="news-sec-grd-item-des">
+                  <div class="news-published">
+                    <span><strong>22</strong><br>sep</span>
+                  </div>
+                  <h5 class="fl-h5 news-grd-title"><a href="#">Massa, dictum quam quis mattis nunc gravida elementum donec ipsum.</a> </h5>
+                  <p>Senectus mattis a, mattis maecenas lobortis vitae blandit integer. Pulvinar tellus vitae<br> leo molestie.</p>
+                  <div class="news-grd-btn">
+                    <a href="#">
+                      <i>
+                        <svg class="news-des-btn" width="32" height="18" viewBox="0 0 32 18" fill="#FF5C26">
+                          <use xlink:href="#news-des-btn"></use>
+                        </svg>
+                      </i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="news-sec-grd">
+              <div class="news-sec-grd-item">
+                <div class="news-sec-grd-item-des">
+                  <div class="news-published">
+                    <span><strong>22</strong><br>sep</span>
+                  </div>
+                  <h5 class="fl-h5 news-grd-title"><a href="#">Massa, dictum quam quis mattis nunc gravida elementum donec ipsum.</a> </h5>
+                  <p>Senectus mattis a, mattis maecenas lobortis vitae blandit integer. Pulvinar tellus vitae<br> leo molestie.</p>
+                  <div class="news-grd-btn">
+                    <a href="#">
+                      <i>
+                        <svg class="news-des-btn" width="32" height="18" viewBox="0 0 32 18" fill="#FF5C26">
+                          <use xlink:href="#news-des-btn"></use>
+                        </svg>
+                      </i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="news-sec-btn">
+            <a href="#" class="fl-transparent-btn">meer  nieuws</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="blockquote-sec blockquote-slider-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="blockquote-sec-cntlr">
+          <div class="blockquote-grds blockquoteSlider">
+            <div class="blockquote-grd-item">
+              <blockquote>
+                <div class="blockquote-img">
+                  <img src="assets/images/blockquote.png" alt="">
+                </div>
+                <div class="blockquote-des">
+                  <p>Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. Habitant et nibh facilisis morbi.</p>
+                  <strong>Mathias H.  -  Klant</strong>
+                </div>
+              </blockquote>
+            </div>
+            <div class="blockquote-grd-item">
+              <blockquote>
+                <div class="blockquote-img">
+                  <img src="assets/images/blockquote.png" alt="">
+                </div>
+                <div class="blockquote-des">
+                  <p>Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. Habitant et nibh facilisis morbi.</p>
+                  <strong>Mathias H.  -  Klant</strong>
+                </div>
+              </blockquote>
+            </div>
+            <div class="blockquote-grd-item">
+              <blockquote>
+                <div class="blockquote-img">
+                  <img src="assets/images/blockquote.png" alt="">
+                </div>
+                <div class="blockquote-des">
+                  <p>Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. Habitant et nibh facilisis morbi.</p>
+                  <strong>Mathias H.  -  Klant</strong>
+                </div>
+              </blockquote>
+            </div>
+          </div>
+          <div class="blockquote-arrow">
+              <div class="fl-prev-next">
+                <span class="fl-prev">
+                  <i>
+                    <svg class="slider-lft-arrow-svg" width="32" height="18" viewBox="0 0 32 18" fill="#7D8D98">
+                      <use xlink:href="#slider-lft-arrow-svg"></use> 
+                    </svg>
+                  </i>
+                </span>
+                <span class="fl-next">
+                  <i>
+                    <svg class="slider-rgt-arrow-svg" width="32" height="18" viewBox="0 0 32 18" fill="#7D8D98">
+                      <use xlink:href="#slider-rgt-arrow-svg"></use> 
+                    </svg>
+                  </i>
+                </span>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="our-team-sec">
+  <div class="container">
+    <div class="row">
+      <div class="com-md-12">
+        <div class="our-team-sec-inner">
+          <div class="sec-entry-hdr">
+            <h3 class="fl-h3 sec-entry-hdr-title">Deze experten staan voor je klaar</h3>
+            <p>Nunc lorem augue, condimentum eu aliquam id, eleifend nec ex. Integer malesuada volutpat finibus. <strong>Habitant et nibh facilisis morbi.</strong></p>
+          </div>
+          <div class="our-team-grids ourTeamSlider">
+            <div class="our-team-grd">
+              <div class="our-team-grd-item">
+                <div class="our-team-grd-img">
+                  <div class="our-team-grd-img-div inline-bg" style="background-image: url(assets/images/our-team-1.jpg);"></div>
+                </div>
+                <div class="our-team-grd-des">
+                  <h4 class="fl-h4 our-team-grd-title">Marc Cottyn</h4>
+                  <span>Lawyer - Belgium</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="our-team-grd">
+              <div class="our-team-grd-item">
+                <div class="our-team-grd-img">
+                  <div class="our-team-grd-img-div inline-bg" style="background-image: url(assets/images/our-team-2.jpg);"></div>
+                </div>
+                <div class="our-team-grd-des">
+                  <h4 class="fl-h4 our-team-grd-title">Nestor Roseleth</h4>
+                  <span>Lawyer - Belgium</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="our-team-grd">
+              <div class="our-team-grd-item">
+                <div class="our-team-grd-img">
+                  <div class="our-team-grd-img-div inline-bg" style="background-image: url(assets/images/our-team-3.jpg);"></div>
+                </div>
+                <div class="our-team-grd-des">
+                  <h4 class="fl-h4 our-team-grd-title">Ann Van de Steen</h4>
+                  <span>Lawyer - Belgium</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="our-team-grd">
+              <div class="our-team-grd-item">
+                <div class="our-team-grd-img">
+                  <div class="our-team-grd-img-div inline-bg" style="background-image: url(assets/images/our-team-4.jpg);"></div>
+                </div>
+                <div class="our-team-grd-des">
+                  <h4 class="fl-h4 our-team-grd-title">Patrick Jacobs</h4>
+                  <span>Lawyer - Belgium</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="our-team-grd">
+              <div class="our-team-grd-item">
+                <div class="our-team-grd-img">
+                  <div class="our-team-grd-img-div inline-bg" style="background-image: url(assets/images/our-team-5.jpg);"></div>
+                </div>
+                <div class="our-team-grd-des">
+                  <h4 class="fl-h4 our-team-grd-title">Jan Van der Snickt</h4>
+                  <span>Lawyer - Belgium</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="our-team-sec-btn">
+            <a href="#" class="fl-btn">team</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
-
-
-  <section style="height: 500px;"></section>
+<div class="footer-top-module">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="footer-top-module-des">
+          <h2 class="fl-h2 footer-top-title">Over Cottyn</h2>
+          <p>Scelerisque mollis varius non morbi vulputate non. Tortor egestas volutpat faucibus gravida malesuada tincidunt. <strong>Habitant et nibh facilisis morbi.</strong></p>
+          <div class="footer-top-module-btm">
+            <a href="#" class="fl-btn">Over Ons</a>
+            <a href="#" class="fl-btn">Ons team</a>
+            <a href="#" class="fl-btn">Linkedin</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
