--- a/theme/cottyn/vakgebieden-overzicht.html
+++ b/theme/cottyn/vakgebieden-overzicht.html
@@ -216,8 +216,247 @@
   </div>
 </section>
 
+<section class="Vakgebieden-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="Vakgebieden-inner">
+          <div class="Vakgebieden-search-box">
+            <form action="">
+              <div class="input-field-row">
+                <div class="input-field-col">
+                  <label for="search-box">Zoeken</label>
+                  <input id="search-box" type="text" placeholder="Zoeken hier">
+                  <button>
+                    <svg class="srch-icon" width="16" height="16" viewBox="0 0 16 16" fill="#FF5C26">
+                      <use xlink:href="#srch-icon"></use> 
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="Vakgebieden-grds">
+            <ul class="reset-list">
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-01.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Publiek en administratief recht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-02.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Verzekeringen, verkeer en aansprakelijkheid</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-03.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Bouwrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-04.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Burgerlijk recht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-05.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Fiscaal Recht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-06.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Familierecht en Familiaal Vermogensrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-07.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Arbeidsrecht en Sociale Zekerheid</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-08.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Strafrecht en Strafprocesrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-09.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Handelsrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-10.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Vreemdelingenrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-11.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Real Estate</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-12.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Venootschapsrecht</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-13.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Projectfinanciering en Infrastructuur</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-14.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Intellectuele eigendom en TMT (technologie, media, telecommunicatie)</a></h3>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="Vakgebieden-grds-item">
+                  <div class="Vakgebieden-img">
+                    <a href="#">
+                      <i>
+                        <img src="assets/images/vakgebieden-15.png" alt="">
+                      </i>
+                    </a>
+                  </div>
+                  <div class="Vakgebieden-des">
+                    <h3 class="fl-h5"><a href="#">Geschillenbeslechting, bemiddeling en arbitrage</a></h3>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <footer class="footer-wrp border-none">
+  <footer class="footer-wrp">
     <div class="ftr-top-wrap">
       <div class="container">
         <div class="row">
